--- a/index.html
+++ b/index.html
@@ -18,37 +18,21 @@
         * { box-sizing: border-box; margin: 0; padding: 0; }
         body { font-family: 'Cairo', sans-serif; background-color: var(--white); color: var(--dark-brown); scroll-behavior: smooth; overflow-x: hidden; }
 
-        /* البنر العلوي القهوائي */
-        .top-banner { 
-            background: var(--dark-brown); 
-            color: var(--white); 
-            padding: 10px 5%; 
-            display: flex; 
-            justify-content: space-between; 
-            align-items: center; 
-            font-size: 14px;
-        }
+        /* البنر العلوي */
+        .top-banner { background: var(--dark-brown); color: var(--white); padding: 10px 5%; display: flex; justify-content: space-between; align-items: center; font-size: 14px; }
         .whatsapp-link-top { color: var(--white); text-decoration: none; font-weight: bold; }
 
         /* الهيدر */
-        header { 
-            background: rgba(255, 255, 255, 0.98); 
-            backdrop-filter: blur(10px); 
-            padding: 10px 5%; 
-            display: flex; 
-            justify-content: space-between; 
-            align-items: center; 
-            position: sticky; 
-            top: 0; 
-            z-index: 1000; 
-            box-shadow: 0 2px 15px rgba(0,0,0,0.05); 
-        }
+        header { background: rgba(255, 255, 255, 0.98); backdrop-filter: blur(10px); padding: 10px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 15px rgba(0,0,0,0.05); }
         .logo-img { height: 45px; cursor: pointer; }
         .nav-menu { display: flex; gap: 20px; list-style: none; }
         .nav-menu a { text-decoration: none; color: var(--dark-brown); font-weight: 700; cursor: pointer; font-size: 1rem; }
         .nav-menu a:hover { color: var(--primary-gold); }
 
-        /* قسم الهيرو */
+        .page-section { display: none; }
+        .active-page { display: block; }
+
+        /* الهيرو */
         .hero { 
             height: 75vh; 
             background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.5)), url('https://i.ibb.co/0R1MK2d7/Gemini-Generated-Image-tnocdatnocdatnoc.png'); 
@@ -58,52 +42,31 @@
         .hero h1 { font-size: clamp(28px, 6vw, 55px); font-weight: 900; margin-bottom: 20px; }
         .hero span { color: var(--primary-gold); }
 
-        /* بطاقات الكتالوج (أقسامنا) */
-        .section-padding { padding: 80px 5%; text-align: center; }
-        .catalog-title { font-size: 2.5rem; font-weight: 900; margin-bottom: 40px; }
-        .catalog-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 25px; max-width: 1200px; margin: auto; }
-        .catalog-card { 
-            position: relative; 
-            border-radius: 20px; 
-            overflow: hidden; 
-            height: 400px; 
-            cursor: pointer; 
-            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-            transition: transform 0.3s ease;
-        }
-        .catalog-card:hover { transform: translateY(-10px); }
-        .catalog-card img { width: 100%; height: 100%; object-fit: cover; }
-        .catalog-label { 
-            position: absolute; 
-            bottom: 20px; 
-            left: 50%; 
-            transform: translateX(-50%); 
-            background: rgba(0,0,0,0.8); 
-            color: white; 
-            padding: 10px 30px; 
-            border-radius: 10px; 
-            font-weight: bold; 
-            font-size: 1.1rem;
-            min-width: 150px;
-        }
+        /* التواصل في الهيرو */
+        .social-hero { display: flex; gap: 20px; margin-top: 25px; }
+        .social-hero a { color: var(--white); font-size: 1.8rem; transition: 0.3s; text-decoration: none; }
+        .social-hero a:hover { color: var(--primary-gold); transform: translateY(-5px); }
 
-        /* لماذا شبابيك - تكبير الخط والأيقونات */
+        /* الكتالوج */
+        .catalog-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 25px; padding: 40px 5%; max-width: 1200px; margin: auto; }
+        .catalog-card { position: relative; border-radius: 20px; overflow: hidden; height: 350px; cursor: pointer; box-shadow: 0 10px 30px rgba(0,0,0,0.1); }
+        .catalog-card img { width: 100%; height: 100%; object-fit: cover; }
+        .catalog-label { position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%); background: rgba(0,0,0,0.8); color: white; padding: 10px 25px; border-radius: 10px; font-weight: bold; }
+
+        /* لماذا شبابيك */
         .features-section { background: var(--light-bg); padding: 100px 5%; text-align: center; }
-        .features-section h2 { font-size: 3.5rem; font-weight: 900; margin-bottom: 20px; }
-        .features-subtitle { font-size: 1.2rem; opacity: 0.7; margin-bottom: 60px; }
-        .features-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 40px; max-width: 1200px; margin: auto; }
-        .feature-item { text-align: center; padding: 20px; }
-        .feature-item i { 
-            font-size: 4.5rem; /* حجم كبير كما كان سابقاً */
-            color: var(--primary-gold); 
-            margin-bottom: 25px; 
-            display: block;
-        }
-        .feature-item h3 { font-size: 1.8rem; font-weight: 800; margin-bottom: 15px; }
-        .feature-item p { font-size: 1.1rem; line-height: 1.6; opacity: 0.8; }
+        .features-section h2 { font-size: 3.5rem; font-weight: 900; margin-bottom: 40px; }
+        .features-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 30px; }
+        .feature-item i { font-size: 4.5rem; color: var(--primary-gold); margin-bottom: 20px; display: block; }
 
         /* تواصل معنا */
-        #contactSection { display: none; padding: 80px 5%; }
+        .contact-container { max-width: 1000px; margin: auto; display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; padding: 60px 5%; text-align: right; }
+        .contact-info-box { background: var(--light-bg); padding: 30px; border-radius: 15px; }
+        .contact-info-item { display: flex; align-items: center; gap: 15px; margin-bottom: 25px; }
+        .contact-info-item i { color: var(--primary-gold); font-size: 1.5rem; }
+
+        /* من نحن */
+        .about-text { max-width: 900px; margin: auto; padding: 60px 5%; line-height: 2; text-align: justify; font-size: 1.2rem; }
 
         /* الفوتر */
         footer { background: var(--dark-brown); color: white; padding: 60px 5% 20px; }
@@ -114,17 +77,17 @@
 
     <div class="top-banner">
         <div>مرحباً بكم في شبابيك للستائر</div>
-        <a href="https://wa.me/9647883002797" class="whatsapp-link-top">اطلب عبر الواتساب <i class="fab fa-whatsapp"></i></a>
+        <a href="https://wa.me/9647883002797" class="whatsapp-link-top">+964 788 300 2797 <i class="fa-solid fa-phone"></i></a>
     </div>
 
     <header>
-        <button class="btn-calc" style="background:var(--primary-gold); color:white; border:none; padding:10px 20px; border-radius:8px; font-weight:bold; cursor:pointer;" onclick="location.href='https://wa.me/9647883002797'">احسب سعر ستارتك</button>
+        <button onclick="location.href='https://wa.me/9647883002797'" style="background:var(--primary-gold); color:white; border:none; padding:10px 20px; border-radius:8px; font-weight:bold; cursor:pointer;">احسب سعر ستارتك</button>
         <nav>
             <ul class="nav-menu">
-                <li><a onclick="showSection('home')">الرئيسية</a></li>
-                <li><a onclick="showSection('categories')">المنتجات</a></li>
-                <li><a onclick="showSection('about')">من نحن</a></li>
-                <li><a onclick="showSection('contact')">تواصل معنا</a></li>
+                <li><a onclick="showPage('home')">الرئيسية</a></li>
+                <li><a onclick="showPage('categories')">المنتجات</a></li>
+                <li><a onclick="showPage('about')">من نحن</a></li>
+                <li><a onclick="showPage('contact')">تواصل معنا</a></li>
             </ul>
         </nav>
         <div onclick="checkAdminClick()">
@@ -133,101 +96,40 @@
     </header>
 
     <main id="mainContainer">
-        <div id="homePage" class="active">
+        <div id="homePage" class="page-section active-page">
             <section class="hero">
                 <h1>فخامة التفاصيل تبدأ من <br> <span>شبابيك منزلك</span></h1>
                 <p>اكتشف أفخم تشكيلة ستائر منزلية بتصاميم عصرية وكلاسيكية</p>
-                <div class="social-hero" style="display:flex; gap:15px; margin-top:20px;">
-                    <a href="https://facebook.com" style="color:white; font-size:1.5rem;"><i class="fab fa-facebook"></i></a>
-                    <a href="https://instagram.com" style="color:white; font-size:1.5rem;"><i class="fab fa-instagram"></i></a>
-                    <a href="https://youtube.com" style="color:white; font-size:1.5rem;"><i class="fab fa-youtube"></i></a>
-                    <a href="https://x.com" style="color:white; font-size:1.5rem;"><i class="fa-brands fa-x-twitter"></i></a>
+                <div class="social-hero">
+                    <a href="https://www.facebook.com/profile.php?id=61587692021311" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/shababek.curtains/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.tiktok.com/@shababek.curtains" target="_blank"><i class="fab fa-tiktok"></i></a>
+                    <a href="https://youtube.com/@shababek.curtains?si=KKsEbL98N0fq2e2U" target="_blank"><i class="fab fa-youtube"></i></a>
+                    <a href="https://x.com/ShababekCurtain" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="https://www.snapchat.com/add/shababek.curtains" target="_blank"><i class="fab fa-snapchat"></i></a>
                 </div>
             </section>
 
-            <section class="section-padding" id="categories">
-                <h2 class="catalog-title">أقسامنا</h2>
-                <p style="margin-bottom:40px; opacity:0.7;">اختر من بين مجموعتنا المتنوعة</p>
+            <section id="categories" style="padding-top: 80px;">
+                <h2 style="text-align:center; font-size:2.5rem; font-weight:900;">أقسامنا</h2>
                 <div class="catalog-grid">
-                    <div class="catalog-card" onclick="alert('فتح كتالوج بلاك أوت')">
-                        <img src="https://i.ibb.co/dsyqws88/curtain-blackout-BDZvwy-X3.jpg">
-                        <div class="catalog-label">بلاك أوت</div>
-                    </div>
-                    <div class="catalog-card" onclick="alert('فتح كتالوج شفافة')">
-                        <img src="https://i.ibb.co/23ypfxBq/curtain-sheer-B6-H5y-JXx.jpg">
-                        <div class="catalog-label">شفافة</div>
-                    </div>
-                    <div class="catalog-card" onclick="alert('فتح كتالوج ديكور')">
-                        <img src="https://i.ibb.co/JRd7B9dC/42edce8e89a20200950e110c2d8d41b2.jpg">
-                        <div class="catalog-label">ديكور</div>
-                    </div>
-                    <div class="catalog-card" onclick="alert('فتح كتالوج رول')">
-                        <img src="https://i.ibb.co/d4GXf0HM/curtain-roller-5c189-CRe.jpg">
-                        <div class="catalog-label">رول</div>
-                    </div>
+                    <div class="catalog-card"><img src="https://i.ibb.co/dsyqws88/curtain-blackout-BDZvwy-X3.jpg"><div class="catalog-label">بلاك أوت</div></div>
+                    <div class="catalog-card"><img src="https://i.ibb.co/23ypfxBq/curtain-sheer-B6-H5y-JXx.jpg"><div class="catalog-label">شفافة</div></div>
+                    <div class="catalog-card"><img src="https://i.ibb.co/JRd7B9dC/42edce8e89a20200950e110c2d8d41b2.jpg"><div class="catalog-label">ديكور</div></div>
+                    <div class="catalog-card"><img src="https://i.ibb.co/d4GXf0HM/curtain-roller-5c189-CRe.jpg"><div class="catalog-label">رول</div></div>
                 </div>
             </section>
 
             <section class="features-section">
                 <h2>لماذا شبابيك؟</h2>
-                <p class="features-subtitle">مميزات تجعلنا الخيار الأول</p>
                 <div class="features-grid">
-                    <div class="feature-item">
-                        <i class="fa-solid fa-palette"></i>
-                        <h3>تصاميم حصرية</h3>
-                        <p>مجموعة متنوعة من التصاميم العصرية والكلاسيكية</p>
-                    </div>
-                    <div class="feature-item">
-                        <i class="fa-solid fa-ruler-combined"></i>
-                        <h3>مقاسات مخصصة</h3>
-                        <p>تفصيل على حسب مقاسات نوافذك بدقة عالية</p>
-                    </div>
-                    <div class="feature-item">
-                        <i class="fa-solid fa-truck-fast"></i>
-                        <h3>تركيب منزلي</h3>
-                        <p>فريق متخصص لتركيب الستائر في منزلك</p>
-                    </div>
-                    <div class="feature-item">
-                        <i class="fa-solid fa-shield-halved"></i>
-                        <h3>ضمان الجودة</h3>
-                        <p>ضمان شامل على جميع منتجاتنا وخدماتنا</p>
-                    </div>
+                    <div class="feature-item"><i class="fa-solid fa-palette"></i><h3>تصاميم حصرية</h3></div>
+                    <div class="feature-item"><i class="fa-solid fa-ruler-combined"></i><h3>مقاسات مخصصة</h3></div>
+                    <div class="feature-item"><i class="fa-solid fa-truck-fast"></i><h3>تركيب منزلي</h3></div>
+                    <div class="feature-item"><i class="fa-solid fa-shield-halved"></i><h3>ضمان الجودة</h3></div>
                 </div>
             </section>
         </div>
-    </main>
 
-    <footer>
-        <div class="footer-grid">
-            <div>
-                <h3 style="margin-bottom:20px; color:var(--primary-gold);">شبابيك للستائر</h3>
-                <p style="line-height:1.6; opacity:0.8;">نقدم أفخم تشكيلة ستائر منزلية بأعلى جودة. خبرة طويلة في التصميم والتركيب.</p>
-            </div>
-            <div>
-                <h3 style="margin-bottom:20px;">تواصل معنا</h3>
-                <p>العراق - بغداد</p>
-                <p>+964 788 300 2797</p>
-            </div>
-        </div>
-        <p style="text-align:center; margin-top:40px; opacity:0.5; border-top:1px solid rgba(255,255,255,0.1); padding-top:20px;">© 2025 شبابيك للستائر جميع الحقوق محفوظة.</p>
-    </footer>
-
-    <script>
-        function showSection(id) {
-            if(id === 'categories') {
-                document.getElementById('homePage').style.display = 'block';
-                document.getElementById('categories').scrollIntoView({ behavior: 'smooth' });
-            } else if(id === 'home') {
-                document.getElementById('homePage').style.display = 'block';
-                window.scrollTo(0,0);
-            }
-            // يمكن إضافة تبديل الصفحات الأخرى هنا لاحقاً
-        }
-
-        let clicks = 0;
-        function checkAdminClick() {
-            clicks++; if(clicks >= 5) { alert("لوحة الإدارة قيد التفعيل"); clicks = 0; }
-        }
-    </script>
-</body>
-</html>
+        <div id="aboutPage" class="page-section">
+            <section class="hero" style="
