--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         .nav-menu a { text-decoration: none; color: var(--dark-brown); font-weight: 700; cursor: pointer; font-size: 1rem; }
         .nav-menu a:hover { color: var(--primary-gold); }
 
+        /* الأقسام الصفحات */
         .page-section { display: none; }
         .active-page { display: block; }
 
@@ -42,11 +43,6 @@
         .hero h1 { font-size: clamp(28px, 6vw, 55px); font-weight: 900; margin-bottom: 20px; }
         .hero span { color: var(--primary-gold); }
 
-        /* التواصل في الهيرو */
-        .social-hero { display: flex; gap: 20px; margin-top: 25px; }
-        .social-hero a { color: var(--white); font-size: 1.8rem; transition: 0.3s; text-decoration: none; }
-        .social-hero a:hover { color: var(--primary-gold); transform: translateY(-5px); }
-
         /* الكتالوج */
         .catalog-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 25px; padding: 40px 5%; max-width: 1200px; margin: auto; }
         .catalog-card { position: relative; border-radius: 20px; overflow: hidden; height: 350px; cursor: pointer; box-shadow: 0 10px 30px rgba(0,0,0,0.1); }
@@ -59,16 +55,16 @@
         .features-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 30px; }
         .feature-item i { font-size: 4.5rem; color: var(--primary-gold); margin-bottom: 20px; display: block; }
 
-        /* تواصل معنا */
+        /* صفحة تواصل معنا */
         .contact-container { max-width: 1000px; margin: auto; display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; padding: 60px 5%; text-align: right; }
         .contact-info-box { background: var(--light-bg); padding: 30px; border-radius: 15px; }
         .contact-info-item { display: flex; align-items: center; gap: 15px; margin-bottom: 25px; }
         .contact-info-item i { color: var(--primary-gold); font-size: 1.5rem; }
 
-        /* من نحن */
+        /* صفحة من نحن */
         .about-text { max-width: 900px; margin: auto; padding: 60px 5%; line-height: 2; text-align: justify; font-size: 1.2rem; }
 
-        /* الفوتر */
+        /* الفوتر القهوائي */
         footer { background: var(--dark-brown); color: white; padding: 60px 5% 20px; }
         .footer-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 40px; }
     </style>
@@ -100,13 +96,11 @@
             <section class="hero">
                 <h1>فخامة التفاصيل تبدأ من <br> <span>شبابيك منزلك</span></h1>
                 <p>اكتشف أفخم تشكيلة ستائر منزلية بتصاميم عصرية وكلاسيكية</p>
-                <div class="social-hero">
-                    <a href="https://www.facebook.com/profile.php?id=61587692021311" target="_blank"><i class="fab fa-facebook"></i></a>
-                    <a href="https://www.instagram.com/shababek.curtains/" target="_blank"><i class="fab fa-instagram"></i></a>
-                    <a href="https://www.tiktok.com/@shababek.curtains" target="_blank"><i class="fab fa-tiktok"></i></a>
-                    <a href="https://youtube.com/@shababek.curtains?si=KKsEbL98N0fq2e2U" target="_blank"><i class="fab fa-youtube"></i></a>
-                    <a href="https://x.com/ShababekCurtain" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
-                    <a href="https://www.snapchat.com/add/shababek.curtains" target="_blank"><i class="fab fa-snapchat"></i></a>
+                <div style="display:flex; gap:15px; margin-top:25px;">
+                    <a href="https://facebook.com" style="color:white; font-size:1.8rem;"><i class="fab fa-facebook"></i></a>
+                    <a href="https://instagram.com" style="color:white; font-size:1.8rem;"><i class="fab fa-instagram"></i></a>
+                    <a href="https://youtube.com" style="color:white; font-size:1.8rem;"><i class="fab fa-youtube"></i></a>
+                    <a href="https://x.com" style="color:white; font-size:1.8rem;"><i class="fa-brands fa-x-twitter"></i></a>
                 </div>
             </section>
 
@@ -132,4 +126,68 @@
         </div>
 
         <div id="aboutPage" class="page-section">
-            <section class="hero" style="
+            <section class="hero" style="height:40vh; background-image: url('https://i.ibb.co/0R1MK2d7/Gemini-Generated-Image-tnocdatnocdatnoc.png');">
+                <h1>من نحن</h1>
+            </section>
+            <div class="about-text">
+                <h2 style="color:var(--dark-brown); margin-bottom:20px;">شبابيك للستائر</h2>
+                <p>تأسست شبابيك للستائر بهدف تقديم أفخم وأجود أنواع الستائر المنزلية في العراق. نؤمن بأن الستائر ليست مجرد قطعة قماش، بل هي عنصر أساسي في تصميم المنزل يعكس ذوق أصحابه ويضيف لمسة من الأناقة والفخامة.</p>
+                <p>نقدم مجموعة واسعة تشمل البلاك أوت والشفافة والديكورية وستائر الرول، بأقمشة مستوردة من أفضل المصانع العالمية. كما نوفر خدمة التفصيل حسب المقاسات وخدمة التركيب المنزلي بأيدي فنيين متخصصين.</p>
+            </div>
+        </div>
+
+        <div id="contactPage" class="page-section">
+            <section class="hero" style="height:40vh; background-image: url('https://i.ibb.co/0R1MK2d7/Gemini-Generated-Image-tnocdatnocdatnoc.png');">
+                <h1>تواصل معنا</h1>
+            </section>
+            <div class="contact-container">
+                <div class="contact-info-box">
+                    <div class="contact-info-item"><i class="fa-solid fa-location-dot"></i><div><strong>العنوان:</strong> العراق - بغداد</div></div>
+                    <div class="contact-info-item"><i class="fa-solid fa-phone"></i><div><strong>الهاتف:</strong> +964 788 300 2797</div></div>
+                    <div class="contact-info-item"><i class="fa-solid fa-clock"></i><div><strong>ساعات العمل:</strong> السبت - الخميس 9ص - 9م</div></div>
+                </div>
+                <div style="background:var(--white); padding:30px; border-radius:15px; border:1px solid #ddd;">
+                    <h3>أرسل لنا رسالة</h3>
+                    <button onclick="location.href='https://wa.me/9647883002797'" style="width:100%; padding:15px; background:#25D366; color:white; border:none; border-radius:10px; font-weight:bold; margin-top:20px; cursor:pointer;">إرسال عبر واتساب</button>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <footer id="contact">
+        <div class="footer-grid">
+            <div>
+                <h3 style="color:var(--primary-gold); margin-bottom:20px;">شبابيك للستائر</h3>
+                <p style="opacity:0.8;">نقدم أفخم تشكيلة ستائر منزلية بأعلى جودة وأفضل الأسعار.</p>
+            </div>
+            <div>
+                <h3>تواصل معنا</h3>
+                <p>العراق - بغداد</p>
+                <p>+964 788 300 2797</p>
+            </div>
+        </div>
+        <p style="text-align:center; margin-top:40px; opacity:0.5; border-top:1px solid rgba(255,255,255,0.1); padding-top:20px;">© 2025 شبابيك للستائر جميع الحقوق محفوظة.</p>
+    </footer>
+
+    <script>
+        function showPage(pageId) {
+            document.querySelectorAll('.page-section').forEach(page => {
+                page.classList.remove('active-page');
+            });
+            
+            if(pageId === 'categories') {
+                document.getElementById('homePage').classList.add('active-page');
+                document.getElementById('categories').scrollIntoView({ behavior: 'smooth' });
+            } else {
+                document.getElementById(pageId + 'Page').classList.add('active-page');
+                window.scrollTo(0,0);
+            }
+        }
+
+        let clicks = 0;
+        function checkAdminClick() {
+            clicks++; if(clicks >= 5) { alert("لوحة الإدارة قيد التفعيل"); clicks = 0; }
+        }
+    </script>
+</body>
+</html>
