--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         /* البنر العلوي */
         .top-banner { background: var(--dark-brown); color: var(--white); padding: 10px 5%; display: flex; justify-content: space-between; align-items: center; font-size: 14px; }
-        .whatsapp-link-top { color: var(--white); text-decoration: none; font-weight: bold; }
+        .whatsapp-link-top { color: var(--white); text-decoration: none; font-weight: bold; display: flex; align-items: center; gap: 8px; }
 
         /* الهيدر */
         header { background: rgba(255, 255, 255, 0.98); backdrop-filter: blur(10px); padding: 10px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 15px rgba(0,0,0,0.05); }
@@ -29,7 +29,6 @@
         .nav-menu a { text-decoration: none; color: var(--dark-brown); font-weight: 700; cursor: pointer; font-size: 1rem; }
         .nav-menu a:hover { color: var(--primary-gold); }
 
-        /* الأقسام الصفحات */
         .page-section { display: none; }
         .active-page { display: block; }
 
@@ -43,37 +42,75 @@
         .hero h1 { font-size: clamp(28px, 6vw, 55px); font-weight: 900; margin-bottom: 20px; }
         .hero span { color: var(--primary-gold); }
 
-        /* الكتالوج */
-        .catalog-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 25px; padding: 40px 5%; max-width: 1200px; margin: auto; }
-        .catalog-card { position: relative; border-radius: 20px; overflow: hidden; height: 350px; cursor: pointer; box-shadow: 0 10px 30px rgba(0,0,0,0.1); }
-        .catalog-card img { width: 100%; height: 100%; object-fit: cover; }
-        .catalog-label { position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%); background: rgba(0,0,0,0.8); color: white; padding: 10px 25px; border-radius: 10px; font-weight: bold; }
+        /* التواصل في الهيرو */
+        .social-hero { display: flex; gap: 20px; margin-top: 25px; }
+        .social-hero a { color: var(--white); font-size: 1.8rem; transition: 0.3s; text-decoration: none; }
+        .social-hero a:hover { color: var(--primary-gold); transform: translateY(-5px); }
 
-        /* لماذا شبابيك */
-        .features-section { background: var(--light-bg); padding: 100px 5%; text-align: center; }
-        .features-section h2 { font-size: 3.5rem; font-weight: 900; margin-bottom: 40px; }
+        /* أقسامنا تفاعلية بخط واحد */
+        .catalog-grid { 
+            display: flex; 
+            flex-wrap: nowrap; 
+            overflow-x: auto; 
+            gap: 20px; 
+            padding: 40px 5%; 
+            max-width: 1200px; 
+            margin: auto;
+            scrollbar-width: none; /* لإخفاء شريط التمرير في فايرفوكس */
+        }
+        .catalog-grid::-webkit-scrollbar { display: none; } /* لإخفاء شريط التمرير في كروم */
+        
+        .catalog-card { 
+            flex: 0 0 calc(25% - 15px); /* 4 صور في الصف الواحد */
+            position: relative; 
+            border-radius: 20px; 
+            overflow: hidden; 
+            height: 350px; 
+            cursor: pointer; 
+            box-shadow: 0 10px 30px rgba(0,0,0,0.1); 
+            transition: 0.3s ease;
+        }
+        .catalog-card:hover { transform: scale(1.03); }
+        .catalog-card img { width: 100%; height: 100%; object-fit: cover; }
+        .catalog-label { position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%); background: rgba(0,0,0,0.8); color: white; padding: 8px 20px; border-radius: 10px; font-weight: bold; white-space: nowrap; font-size: 0.9rem; }
+
+        /* لماذا شبابيك؟ */
+        .features-section { background: var(--light-bg); padding: 80px 5%; text-align: center; }
+        .features-section h2 { 
+            font-size: 2.5rem; /* تم تصغير الحجم */
+            font-weight: 700; /* تغيير نوع الخط ليكون أنحف قليلاً */
+            margin-bottom: 40px; 
+            font-family: 'Cairo', sans-serif;
+        }
         .features-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 30px; }
         .feature-item i { font-size: 4.5rem; color: var(--primary-gold); margin-bottom: 20px; display: block; }
+        .feature-item h3 { font-size: 1.4rem; font-weight: 700; margin-bottom: 10px; }
+        .feature-item p { font-size: 1rem; opacity: 0.8; }
 
-        /* صفحة تواصل معنا */
+        /* تواصل معنا */
         .contact-container { max-width: 1000px; margin: auto; display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; padding: 60px 5%; text-align: right; }
         .contact-info-box { background: var(--light-bg); padding: 30px; border-radius: 15px; }
         .contact-info-item { display: flex; align-items: center; gap: 15px; margin-bottom: 25px; }
         .contact-info-item i { color: var(--primary-gold); font-size: 1.5rem; }
 
-        /* صفحة من نحن */
+        /* من نحن */
         .about-text { max-width: 900px; margin: auto; padding: 60px 5%; line-height: 2; text-align: justify; font-size: 1.2rem; }
 
-        /* الفوتر القهوائي */
+        /* الفوتر */
         footer { background: var(--dark-brown); color: white; padding: 60px 5% 20px; }
         .footer-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 40px; }
+        .whatsapp-link-footer { color: var(--primary-gold); text-decoration: none; font-weight: bold; display: flex; align-items: center; gap: 10px; margin-top: 10px; }
+
+        @media (max-width: 768px) {
+            .catalog-card { flex: 0 0 70%; } /* عرض صورة واحدة تقريباً على الجوال مع إمكانية السحب */
+        }
     </style>
 </head>
 <body>
 
     <div class="top-banner">
         <div>مرحباً بكم في شبابيك للستائر</div>
-        <a href="https://wa.me/9647883002797" class="whatsapp-link-top">+964 788 300 2797 <i class="fa-solid fa-phone"></i></a>
+        <a href="https://wa.me/9647883002797" class="whatsapp-link-top">تواصل معنا عبر واتساب <i class="fa-brands fa-whatsapp"></i></a>
     </div>
 
     <header>
@@ -96,16 +133,19 @@
             <section class="hero">
                 <h1>فخامة التفاصيل تبدأ من <br> <span>شبابيك منزلك</span></h1>
                 <p>اكتشف أفخم تشكيلة ستائر منزلية بتصاميم عصرية وكلاسيكية</p>
-                <div style="display:flex; gap:15px; margin-top:25px;">
-                    <a href="https://facebook.com" style="color:white; font-size:1.8rem;"><i class="fab fa-facebook"></i></a>
-                    <a href="https://instagram.com" style="color:white; font-size:1.8rem;"><i class="fab fa-instagram"></i></a>
-                    <a href="https://youtube.com" style="color:white; font-size:1.8rem;"><i class="fab fa-youtube"></i></a>
-                    <a href="https://x.com" style="color:white; font-size:1.8rem;"><i class="fa-brands fa-x-twitter"></i></a>
+                <div class="social-hero">
+                    <a href="https://www.facebook.com/profile.php?id=61587692021311" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/shababek.curtains/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.tiktok.com/@shababek.curtains" target="_blank"><i class="fab fa-tiktok"></i></a>
+                    <a href="https://youtube.com/@shababek.curtains?si=KKsEbL98N0fq2e2U" target="_blank"><i class="fab fa-youtube"></i></a>
+                    <a href="https://x.com/ShababekCurtain" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="https://www.snapchat.com/add/shababek.curtains" target="_blank"><i class="fab fa-snapchat"></i></a>
                 </div>
             </section>
 
             <section id="categories" style="padding-top: 80px;">
-                <h2 style="text-align:center; font-size:2.5rem; font-weight:900;">أقسامنا</h2>
+                <h2 style="text-align:center; font-size:2.5rem; font-weight:900; margin-bottom:10px;">أقسامنا</h2>
+                <p style="text-align:center; opacity:0.7; margin-bottom:20px;">اختر من بين مجموعتنا المتنوعة</p>
                 <div class="catalog-grid">
                     <div class="catalog-card"><img src="https://i.ibb.co/dsyqws88/curtain-blackout-BDZvwy-X3.jpg"><div class="catalog-label">بلاك أوت</div></div>
                     <div class="catalog-card"><img src="https://i.ibb.co/23ypfxBq/curtain-sheer-B6-H5y-JXx.jpg"><div class="catalog-label">شفافة</div></div>
@@ -131,8 +171,7 @@
             </section>
             <div class="about-text">
                 <h2 style="color:var(--dark-brown); margin-bottom:20px;">شبابيك للستائر</h2>
-                <p>تأسست شبابيك للستائر بهدف تقديم أفخم وأجود أنواع الستائر المنزلية في العراق. نؤمن بأن الستائر ليست مجرد قطعة قماش، بل هي عنصر أساسي في تصميم المنزل يعكس ذوق أصحابه ويضيف لمسة من الأناقة والفخامة.</p>
-                <p>نقدم مجموعة واسعة تشمل البلاك أوت والشفافة والديكورية وستائر الرول، بأقمشة مستوردة من أفضل المصانع العالمية. كما نوفر خدمة التفصيل حسب المقاسات وخدمة التركيب المنزلي بأيدي فنيين متخصصين.</p>
+                <p>تأسست شبابيك للستائر بهدف تقديم أفخم وأجود أنواع الستائر المنزلية في العراق. نؤمن بأن الستائر عنصر أساسي يعكس ذوق أصحاب المنزل ويضيف لمسة من الأناقة والفخامة.</p>
             </div>
         </div>
 
@@ -143,12 +182,12 @@
             <div class="contact-container">
                 <div class="contact-info-box">
                     <div class="contact-info-item"><i class="fa-solid fa-location-dot"></i><div><strong>العنوان:</strong> العراق - بغداد</div></div>
-                    <div class="contact-info-item"><i class="fa-solid fa-phone"></i><div><strong>الهاتف:</strong> +964 788 300 2797</div></div>
+                    <div class="contact-info-item"><i class="fa-brands fa-whatsapp"></i><div><strong>واتساب:</strong> تواصل معنا عبر واتساب</div></div>
                     <div class="contact-info-item"><i class="fa-solid fa-clock"></i><div><strong>ساعات العمل:</strong> السبت - الخميس 9ص - 9م</div></div>
                 </div>
-                <div style="background:var(--white); padding:30px; border-radius:15px; border:1px solid #ddd;">
+                <div style="background:var(--white); padding:30px; border-radius:15px; border:1px solid #ddd; text-align:center;">
                     <h3>أرسل لنا رسالة</h3>
-                    <button onclick="location.href='https://wa.me/9647883002797'" style="width:100%; padding:15px; background:#25D366; color:white; border:none; border-radius:10px; font-weight:bold; margin-top:20px; cursor:pointer;">إرسال عبر واتساب</button>
+                    <button onclick="location.href='https://wa.me/9647883002797'" style="width:100%; padding:15px; background:#25D366; color:white; border:none; border-radius:10px; font-weight:bold; margin-top:20px; cursor:pointer;">تواصل معنا عبر واتساب <i class="fa-brands fa-whatsapp"></i></button>
                 </div>
             </div>
         </div>
@@ -163,7 +202,7 @@
             <div>
                 <h3>تواصل معنا</h3>
                 <p>العراق - بغداد</p>
-                <p>+964 788 300 2797</p>
+                <a href="https://wa.me/9647883002797" class="whatsapp-link-footer">تواصل معنا عبر واتساب <i class="fa-brands fa-whatsapp"></i></a>
             </div>
         </div>
         <p style="text-align:center; margin-top:40px; opacity:0.5; border-top:1px solid rgba(255,255,255,0.1); padding-top:20px;">© 2025 شبابيك للستائر جميع الحقوق محفوظة.</p>
@@ -171,10 +210,7 @@
 
     <script>
         function showPage(pageId) {
-            document.querySelectorAll('.page-section').forEach(page => {
-                page.classList.remove('active-page');
-            });
-            
+            document.querySelectorAll('.page-section').forEach(page => page.classList.remove('active-page'));
             if(pageId === 'categories') {
                 document.getElementById('homePage').classList.add('active-page');
                 document.getElementById('categories').scrollIntoView({ behavior: 'smooth' });
