--- a/index.html
+++ b/index.html
@@ -1,34 +1,176 @@
-/* قسم دكتور ديكور */
-.dr-decor-banner {
-    background: var(--dark-brown);
-    color: var(--white);
-    padding: 40px 5%;
-    margin: 40px 0;
-    border-radius: 20px;
-    display: flex;
-    align-items: center;
-    gap: 30px;
-    border-right: 8px solid var(--primary-gold);
-}
-.dr-icon { font-size: 3.5rem; color: var(--primary-gold); }
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>شبابيك للستائر - دكتور ديكور</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;900&display=swap" rel="stylesheet">
+    
+    <style>
+        :root {
+            --primary-gold: #d9b382;
+            --dark-brown: #3d2e24; 
+            --white: #ffffff;
+            --light-bg: #f9f6f2;
+        }
 
-/* قسم آراء العملاء */
-.testimonials-section { padding: 60px 5%; background: var(--white); text-align: center; }
-.testimonials-grid { 
-    display: grid; 
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); 
-    gap: 25px; 
-    margin-top: 40px; 
-}
-.testimonial-card {
-    background: var(--light-bg);
-    padding: 30px;
-    border-radius: 15px;
-    position: relative;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.05);
-}
-.testimonial-card i.quote { 
-    position: absolute; top: 15px; right: 15px; 
-    font-size: 1.5rem; color: var(--primary-gold); opacity: 0.3; 
-}
-.stars { color: #ffc107; margin-bottom: 10px; }
+        * { box-sizing: border-box; margin: 0; padding: 0; }
+        body { font-family: 'Cairo', sans-serif; background-color: var(--white); color: var(--dark-brown); scroll-behavior: smooth; overflow-x: hidden; }
+
+        /* البنر العلوي */
+        .top-banner { background: var(--dark-brown); color: var(--white); padding: 10px 5%; display: flex; justify-content: space-between; align-items: center; font-size: 14px; }
+        .whatsapp-link-top { color: var(--white); text-decoration: none; font-weight: bold; display: flex; align-items: center; gap: 8px; }
+
+        /* الهيدر */
+        header { background: rgba(255, 255, 255, 0.98); backdrop-filter: blur(10px); padding: 10px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 15px rgba(0,0,0,0.05); }
+        .logo-img { height: 45px; cursor: pointer; }
+        .nav-menu { display: flex; gap: 20px; list-style: none; }
+        .nav-menu a { text-decoration: none; color: var(--dark-brown); font-weight: 700; cursor: pointer; font-size: 1rem; }
+        .nav-menu a:hover { color: var(--primary-gold); }
+
+        .page-section { display: none; }
+        .active-page { display: block; }
+
+        /* الهيرو */
+        .hero { 
+            height: 75vh; 
+            background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.5)), url('https://i.ibb.co/0R1MK2d7/Gemini-Generated-Image-tnocdatnocdatnoc.png'); 
+            background-size: cover; background-position: center; 
+            display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; color: var(--white); padding: 20px;
+        }
+        .hero h1 { font-size: clamp(28px, 6vw, 55px); font-weight: 900; margin-bottom: 20px; }
+        .hero span { color: var(--primary-gold); }
+
+        .social-hero { display: flex; gap: 20px; margin-top: 25px; }
+        .social-hero a { color: var(--white); font-size: 1.8rem; transition: 0.3s; text-decoration: none; }
+        .social-hero a:hover { color: var(--primary-gold); transform: translateY(-5px); }
+
+        /* الأقسام */
+        .catalog-grid { display: flex; flex-wrap: nowrap; overflow-x: auto; gap: 20px; padding: 40px 5%; max-width: 1200px; margin: auto; scrollbar-width: none; }
+        .catalog-grid::-webkit-scrollbar { display: none; }
+        .catalog-card { flex: 0 0 calc(25% - 15px); position: relative; border-radius: 20px; overflow: hidden; height: 350px; cursor: pointer; transition: 0.3s; box-shadow: 0 10px 30px rgba(0,0,0,0.1); }
+        .catalog-card:hover { transform: scale(1.03); }
+        .catalog-card img { width: 100%; height: 100%; object-fit: cover; }
+        .catalog-label { position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%); background: rgba(0,0,0,0.8); color: white; padding: 8px 20px; border-radius: 10px; font-weight: bold; }
+
+        /* دكتور ديكور */
+        .dr-decor-banner { background: var(--dark-brown); color: var(--white); padding: 40px 5%; margin: 40px auto; border-radius: 20px; display: flex; align-items: center; gap: 30px; max-width: 1100px; border-right: 8px solid var(--primary-gold); }
+        .dr-icon { font-size: 3.5rem; color: var(--primary-gold); }
+
+        /* آراء العملاء */
+        .testimonials-section { padding: 60px 5%; text-align: center; }
+        .testimonials-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 25px; margin-top: 40px; }
+        .testimonial-card { background: var(--light-bg); padding: 30px; border-radius: 15px; position: relative; box-shadow: 0 5px 15px rgba(0,0,0,0.05); }
+        .stars { color: #ffc107; margin-bottom: 10px; }
+
+        /* الفوتر */
+        footer { background: var(--dark-brown); color: white; padding: 60px 5% 20px; margin-top: 50px; }
+
+        @media (max-width: 768px) {
+            .catalog-card { flex: 0 0 75%; }
+            .dr-decor-banner { flex-direction: column; text-align: center; }
+        }
+    </style>
+</head>
+<body>
+
+    <div class="top-banner">
+        <div>مرحباً بكم في شبابيك للستائر</div>
+        <a href="https://wa.me/9647883002797" class="whatsapp-link-top">واتساب <i class="fa-brands fa-whatsapp"></i></a>
+    </div>
+
+    <header>
+        <button onclick="location.href='https://wa.me/9647883002797'" style="background:var(--primary-gold); color:white; border:none; padding:10px 20px; border-radius:8px; font-weight:bold; cursor:pointer;">احسب سعر ستارتك</button>
+        <nav>
+            <ul class="nav-menu">
+                <li><a onclick="showPage('home')">الرئيسية</a></li>
+                <li><a onclick="showPage('categories')">المنتجات</a></li>
+                <li><a onclick="showPage('about')">من نحن</a></li>
+                <li><a onclick="showPage('contact')">تواصل معنا</a></li>
+            </ul>
+        </nav>
+        <div onclick="checkAdminClick()">
+            <img src="https://i.ibb.co/3y1ZNCk0/1.png" class="logo-img" alt="شبابيك">
+        </div>
+    </header>
+
+    <main id="mainContainer">
+        <div id="homePage" class="page-section active-page">
+            <section class="hero">
+                <h1>فخامة التفاصيل تبدأ من <br> <span>شبابيك منزلك</span></h1>
+                <div class="social-hero">
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-whatsapp"></i></a>
+                </div>
+            </section>
+
+            <section id="categories" style="padding-top: 80px;">
+                <h2 style="text-align:center; font-size:2.5rem; font-weight:900;">أقسامنا</h2>
+                <div class="catalog-grid">
+                    <div class="catalog-card"><img src="https://i.ibb.co/dsyqws88/curtain-blackout-BDZvwy-X3.jpg"><div class="catalog-label">بلاك أوت</div></div>
+                    <div class="catalog-card"><img src="https://i.ibb.co/23ypfxBq/curtain-sheer-B6-H5y-JXx.jpg"><div class="catalog-label">شفافة</div></div>
+                    <div class="catalog-card"><img src="https://i.ibb.co/JRd7B9dC/42edce8e89a20200950e110c2d8d41b2.jpg"><div class="catalog-label">ديكور</div></div>
+                    <div class="catalog-card"><img src="https://i.ibb.co/d4GXf0HM/curtain-roller-5c189-CRe.jpg"><div class="catalog-label">رول</div></div>
+                </div>
+            </section>
+
+            <section style="padding: 0 5%;">
+                <div class="dr-decor-banner">
+                    <div class="dr-icon"><i class="fa-solid fa-wand-magic-sparkles"></i></div>
+                    <div>
+                        <h2 style="color: var(--primary-gold);">دكتور ديكور</h2>
+                        <p>محتار في اختيار اللون؟ "دكتور ديكور" يقدم لك استشارة مجانية لتنسيق ستائرك.</p>
+                        <button onclick="location.href='https://wa.me/9647883002797?text=استشارة دكتور ديكور'" style="margin-top:15px; padding:10px 25px; border-radius:50px; border:none; background:var(--primary-gold); color:white; font-weight:bold; cursor:pointer;">اطلب استشارتك</button>
+                    </div>
+                </div>
+            </section>
+
+            <section class="testimonials-section">
+                <h2>ثقة عملاء شبابيك</h2>
+                <div class="testimonials-grid">
+                    <div class="testimonial-card">
+                        <div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+                        <p>"تعامل راقي جداً والستائر خيال."</p>
+                        <h4>- أم سارة</h4>
+                    </div>
+                    <div class="testimonial-card">
+                        <div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+                        <p>"دكتور ديكور ساعدني جداً بالاختيار."</p>
+                        <h4>- الأستاذ أحمد</h4>
+                    </div>
+                </div>
+            </section>
+        </div>
+
+        <div id="aboutPage" class="page-section">
+            <h1 style="text-align:center; padding:100px;">من نحن - شبابيك للستائر</h1>
+        </div>
+        <div id="contactPage" class="page-section">
+            <h1 style="text-align:center; padding:100px;">تواصل معنا</h1>
+        </div>
+    </main>
+
+    <footer>
+        <p style="text-align:center;">© 2025 شبابيك للستائر - جميع الحقوق محفوظة.</p>
+    </footer>
+
+    <script>
+        function showPage(pageId) {
+            document.querySelectorAll('.page-section').forEach(p => p.classList.remove('active-page'));
+            if(pageId === 'categories') {
+                document.getElementById('homePage').classList.add('active-page');
+                document.getElementById('categories').scrollIntoView({ behavior: 'smooth' });
+            } else {
+                document.getElementById(pageId + 'Page').classList.add('active-page');
+                window.scrollTo(0,0);
+            }
+        }
+        let clicks = 0;
+        function checkAdminClick() {
+            clicks++; if(clicks >= 5) { alert("لوحة الإدارة قيد التفعيل"); clicks = 0; }
+        }
+    </script>
+</body>
+</html>
