--- a/index.html
+++ b/index.html
@@ -1,148 +1,148 @@
-<footer id="contact">
-    <div class="footer-cta-section">
-        <h2>جاهز لتجديد ستائر منزلك؟ </h2>
-        <p>تواصل معنا الآن واحصل على استشارة مجانية وعرض سعر خاص </p>
-        <div class="cta-btns">
-            <button class="btn-gold-footer" onclick="showPage('categories')">تصفح المنتجات </button>
-            <button class="btn-outline-footer" onclick="location.href='https://wa.me/9647883002797'">تواصل عبر واتساب </button>
-        </div>
-    </div>
-
-    <div class="footer-main-grid">
-        <div class="footer-column-info">
-            <h3>شبابيك للستائر </h3>
-            <p>نقدم أفخم تشكيلة من الستائر المنزلية بأعلى جودة وأفضل الأسعار. خبرة طويلة في تصميم وتركيب الستائر. </p>
-        </div>
-        <div class="footer-column-links">
-            <h3>روابط سريعة </h3>
-            <ul class="footer-links-list">
-                <li onclick="showPage('home')">الرئيسية </li>
-                <li onclick="showPage('categories')">المنتجات </li>
-                <li onclick="showPage('about')">من نحن </li>
-                <li onclick="showPage('contact')">تواصل معنا </li>
-            </ul>
-        </div>
-        <div class="footer-column-contact">
-            <h3>تواصل معنا </h3>
-            <p>العراق - بغداد </p>
-            <p onclick="location.href='https://wa.me/9647883002797'" style="cursor:pointer;">واتساب </p>
-        </div>
-        <div class="footer-column-phone">
-            <p dir="ltr">+964 788 300 2797 </p>
-        </div>
-    </div>
-    <div class="footer-copyright">
-        © 2025 شبابيك للستائر جميع الحقوق محفوظة. 
-    </div>
-</footer>
-
 <style>
-    /* تنسيقات الفوتر الجديد ليتطابق مع الصورة */
-    footer {
-        background-color: var(--dark-brown);
-        color: var(--white);
-        padding: 60px 5% 20px;
+    /* التنسيقات المطلوبة لنهاية الصفحة (الفوتر) */
+    .footer-section {
+        background-color: #3d2e24; /* اللون القهوائي المطلوب */
+        color: #ffffff;
+        padding: 60px 5% 30px;
         text-align: center;
     }
 
-    .footer-cta-section {
+    .cta-container {
         margin-bottom: 60px;
     }
 
-    .footer-cta-section h2 {
+    .cta-container h2 {
         font-size: 2.2rem;
         font-weight: 700;
-        margin-bottom: 10px;
+        margin-bottom: 15px;
+        color: #ffffff;
     }
 
-    .footer-cta-section p {
-        opacity: 0.8;
+    .cta-container p {
+        opacity: 0.9;
         margin-bottom: 30px;
     }
 
-    .cta-btns {
+    .cta-btns-group {
         display: flex;
         justify-content: center;
         gap: 15px;
     }
 
-    .btn-gold-footer {
-        background-color: var(--primary-gold);
-        color: var(--white);
+    .btn-catalog-footer {
+        background-color: #d9b382; /* اللون الذهبي المطلوب */
+        color: #ffffff;
         border: none;
-        padding: 12px 30px;
+        padding: 12px 35px;
         border-radius: 8px;
         font-weight: bold;
         cursor: pointer;
+        transition: 0.3s;
     }
 
-    .btn-outline-footer {
+    .btn-whatsapp-footer {
         background: transparent;
-        border: 1px solid var(--white);
-        color: var(--white);
-        padding: 12px 30px;
+        border: 1px solid #ffffff;
+        color: #ffffff;
+        padding: 12px 35px;
         border-radius: 8px;
         font-weight: bold;
         cursor: pointer;
+        transition: 0.3s;
     }
 
-    .footer-main-grid {
+    .main-footer-grid {
         display: grid;
-        grid-template-columns: 1.5fr 1fr 1fr 1fr;
+        grid-template-columns: 2fr 1fr 1fr 1.5fr;
         gap: 40px;
         text-align: right;
-        padding-bottom: 40px;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+        padding-top: 50px;
+        border-top: 1px solid rgba(255, 255, 255, 0.1);
     }
 
-    .footer-column-info h3, .footer-column-links h3, .footer-column-contact h3 {
-        font-size: 1.2rem;
+    .footer-col h3 {
+        font-size: 1.3rem;
         margin-bottom: 20px;
+        color: #ffffff;
     }
 
-    .footer-column-info p {
-        line-height: 1.8;
+    .footer-col p, .footer-col li {
         opacity: 0.8;
-    }
-
-    .footer-links-list {
+        line-height: 1.8;
         list-style: none;
     }
 
-    .footer-links-list li {
+    .footer-col li {
         margin-bottom: 10px;
         cursor: pointer;
-        opacity: 0.8;
     }
 
-    .footer-links-list li:hover {
-        opacity: 1;
-        color: var(--primary-gold);
-    }
-
-    .footer-column-phone {
+    .phone-display {
         display: flex;
         align-items: center;
         justify-content: flex-end;
         font-weight: bold;
+        font-size: 1.1rem;
     }
 
-    .footer-copyright {
-        padding-top: 20px;
+    .copyright-text {
+        margin-top: 40px;
         font-size: 0.9rem;
-        opacity: 0.6;
+        opacity: 0.5;
     }
 
     @media (max-width: 768px) {
-        .footer-main-grid {
+        .main-footer-grid {
             grid-template-columns: 1fr;
             text-align: center;
         }
-        .footer-column-phone {
-            justify-content: center;
-        }
-        .cta-btns {
+        .cta-btns-group {
             flex-direction: column;
+        }
+        .phone-display {
+            justify-content: center;
         }
     }
 </style>
+
+<footer class="footer-section">
+    <div class="cta-container">
+        <h2>جاهز لتجديد ستائر منزلك؟</h2>
+        <p>تواصل معنا الآن واحصل على استشارة مجانية وعرض سعر خاص</p>
+        <div class="cta-btns-group">
+            <button class="btn-catalog-footer" onclick="showPage('categories')">تصفح المنتجات</button>
+            <button class="btn-whatsapp-footer" onclick="location.href='https://wa.me/9647883002797'">تواصل عبر واتساب</button>
+        </div>
+    </div>
+
+    <div class="main-footer-grid">
+        <div class="footer-col">
+            <h3>شبابيك للستائر</h3>
+            <p>نقدم أفخم تشكيلة من الستائر المنزلية بأعلى جودة وأفضل الأسعار. خبرة طويلة في تصميم وتركيب الستائر.</p>
+        </div>
+        
+        <div class="footer-col">
+            <h3>روابط سريعة</h3>
+            <ul>
+                <li onclick="showPage('home')">الرئيسية</li>
+                <li onclick="showPage('categories')">المنتجات</li>
+                <li onclick="showPage('about')">من نحن</li>
+                <li onclick="showPage('contact')">تواصل معنا</li>
+            </ul>
+        </div>
+
+        <div class="footer-col">
+            <h3>تواصل معنا</h3>
+            <p>العراق - بغداد</p>
+            <p onclick="location.href='https://wa.me/9647883002797'" style="cursor:pointer;">واتساب</p>
+        </div>
+
+        <div class="footer-col phone-display">
+            <p dir="ltr">+964 788 300 2797</p>
+        </div>
+    </div>
+
+    <div class="copyright-text">
+        © 2025 شبابيك للستائر جميع الحقوق محفوظة.
+    </div>
+</footer>
